tests/NormalTests/paczka1/small_fuzzy/32990237.err
Error in line 2: PTNWwOD S999 68,7
Error in line 7: S754 S742 43,4
Error in line 4: OwqcNj S742 64,3
